# opencv-vision

./: .gitignore  CMakeLists.txt
include/: mainwindow.h  opencvthread.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  opencvthread.cpp
utilities/: persons.csv
